--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,8 @@
 set -g history-limit 1000000
-set -g quiet off
 set -g status on
+set -g default-terminal "screen-256color"
 setw -g clock-mode-style 12
 setw -g monitor-activity on
-setw -g utf8 on
 setw -g aggressive-resize on
 setw -g mode-keys vi
 
@@ -27,26 +26,11 @@ bind-key C-c command-prompt "clock %%"
 bind-key d detach
 bind-key z detach
 
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -Tcopy-mode-vi v send -X begin-selection
+bind-key -Tcopy-mode-vi y send -X copy-pipe "reattach-to-user-namespace pbcopy"
+unbind -Tcopy-mode-vi Enter
+bind-key -Tcopy-mode-vi Enter send -X copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Bind ']' to use pbpaste
 bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 
-# Toggle mouse on with ^B m
-bind m \
-  set -g mode-mouse on \;\
-  set -g mouse-resize-pane on \;\
-  set -g mouse-select-pane on \;\
-  set -g mouse-select-window on \;\
-  display 'Mouse: ON'
-
-# Toggle mouse off with ^B M
-bind M \
-  set -g mode-mouse off \;\
-  set -g mouse-resize-pane off \;\
-  set -g mouse-select-pane off \;\
-  set -g mouse-select-window off \;\
-  display 'Mouse: OFF'
