--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 set -g history-limit 1000000
 set -g status on
 set -g default-terminal "screen-256color"
-setw -g clock-mode-style 12
+setw -g clock-mode-style 24
 setw -g monitor-activity on
 setw -g aggressive-resize on
 setw -g mode-keys vi
@@ -11,8 +11,6 @@ set-option -g message-fg colour166
 
 set-option -g display-panes-active-colour colour33
 set-option -g display-panes-colour colour166
-
-set-option -g default-command "reattach-to-user-namespace -l bash"
 
 bind-key - split-window -v
 bind-key \ split-window -h
@@ -26,11 +24,8 @@ bind-key C-c command-prompt "clock %%"
 bind-key d detach
 bind-key z detach
 
-bind-key -Tcopy-mode-vi v send -X begin-selection
-bind-key -Tcopy-mode-vi y send -X copy-pipe "reattach-to-user-namespace pbcopy"
-unbind -Tcopy-mode-vi Enter
-bind-key -Tcopy-mode-vi Enter send -X copy-pipe "reattach-to-user-namespace pbcopy"
-
-# Bind ']' to use pbpaste
-bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
-
+bind P paste-buffer
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+bind-key -t vi-copy 'r' rectangle-toggle
+bind-key -t vi-copy y copy-pipe "xclip -sel clip -i"
